# FinancialPython

./: 0.0_Initial_EDA copy.ipynb  0.0_Initial_EDA.ipynb  0.1_Create_Dataset.ipynb  0.2_EDA_yfinance.ipynb  0.3_Predictor_XGB_yfinance_1h.ipynb  BYBIT.ipynb  BYBIT_only_train.ipynb  CryptoSwapper.ipynb  Crypto_EDA.ipynb  Predictor.ipynb  Predictor_LSTM_coinmetrics_cleaned.ipynb  Predictor_LSTM_yfinance_1h.ipynb  Predictor_XGB.ipynb  Predictor_XGB_coinmetrics.ipynb  RsiOscillator.html  RsiOscillator_upper_bound-30,lower_bound-25,rsi_window-12_.html  RsiOscillator_upper_bound-30,lower_bound-25,rsi_window-18_.html  RsiOscillator_upper_bound-55,lower_bound-10,rsi_window-10_.html  RsiOscillator_upper_bound-55,lower_bound-10,rsi_window-14_.html  RsiOscillator_upper_bound-60,lower_bound-30,rsi_window-22_.html  RsiOscillator_upper_bound-75,lower_bound-35,rsi_window-12_.html  SignalStrategy.html  TEST.ipynb  Test_OpenBB.ipynb  [OTHER]predicting_stock_prices_volatility.ipynb  backtesting_tutorial.ipynb  candles_processed_days_registry.txt  coinmetrics_EDA.ipynb  coinmetrics_test.ipynb  fin_utilities.py  financial_from_polygon.ipynb  my_functions.py  pyproject.toml  read_historical_data.py
Papers/: desktop.ini
algo_code/: __init__.py  collect.py  feature_engineering.py  prepare.py
code/: collect.py  feature_engineering.py
data/: bybit_data.parquet
environment/: conf.yml  pred-conf.yml
examples/: plot.html
