[tool.poetry]
name = "financialpython"
version = "0.1.0"
description = ""
authors = ["manuorlandi <manu.orlandi91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xgboost = "^2.1.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
polars = "^1.1.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
binance = "^0.3"
Bybit = "^0.2.12"
scikit-learn = "^1.5.1"
requests = "^2.32.3"
pybit = "^5.8.0"
backtesting = "^0.3.3"
pyarrow = "^17.0.0"
plotly = "^5.24.1"
nbformat = "^5.10.4"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
statsmodels = "^0.14.3"
yfinance = "^0.2.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
