[tool.poetry]
name = "financialpython"
version = "0.1.0"
description = ""
authors = ["manuorlandi <manu.orlandi91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xgboost = "^2.1.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
polars = "^1.1.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
binance = "^0.3"
Bybit = "^0.2.12"
scikit-learn = "^1.5.1"
requests = "^2.32.3"
pybit = "^5.8.0"
backtesting = "^0.3.3"
pyarrow = "^17.0.0"
plotly = "^5.24.1"
nbformat = "^5.10.4"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
statsmodels = "^0.14.3"
yfinance = "^0.2.43"
fredapi = "^0.5.2"
ruff = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle ('E') and Pyflakes ('F') codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 79

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10